src/test/ui/unboxed-closures/unboxed-closures-type-mismatch.stderr
error[E0308]: mismatched types
  --> $DIR/unboxed-closures-type-mismatch.rs:5:15
   |
LL |     let z = f(1_usize, 2);
   |               ^^^^^^^ expected isize, found usize
help: change the type of the numeric literal from `usize` to `isize`
   |
LL |     let z = f(1_isize, 2);
   |               ^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
